--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 	  <link rel="stylesheet" href="css/font-awesome.min.css">
 	  <link rel="stylesheet" href="css/style.css">
 
+ <script src="https://c9.io/isomorphisms/shut_the_front_door/workspace/codebird-js/sha1.js"></script>
+  <script src="https://c9.io/isomorphisms/shut_the_front_door/workspace/codebird-js/codebird.js"></script>
 	  <script src="js/vendor/angular.min.js"></script>
 	  <script src="js/app.js"></script>
 	   <script src="js/controllers.js"></script>
