--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- Twitter -->
+    <!-- Twitter Please copy to local-->
     <script src="https://c9.io/isomorphisms/shut_the_front_door/workspace/codebird-js/sha1.js"></script>
     <script src="https://c9.io/isomorphisms/shut_the_front_door/workspace/codebird-js/codebird.js"></script>
     <!-- Linkedin -->
